--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -8,7 +8,7 @@
 				<div class="col-xs-3">
 					<%=image_tag(sub_course.try(:image).avatar.url(:c_250_190))%>
 					<div class="shadow">
-						j第一章 &nbsp;&nbsp;C语言程序设计精髓 <span class="glyphicon glyphicon-record" aria-hidden="true"></span>
+						第一章 &nbsp;&nbsp;C语言程序设计精髓 <span class="glyphicon glyphicon-record" aria-hidden="true"></span>
 					</div>
 				</div>
 			<% end %>
