--- a/app/views/votes/create.js.erb
+++ b/app/views/votes/create.js.erb
@@ -1,22 +1,25 @@
 <% unless @success %>
-  alert("操作失败，请刷新重试");
+	alert("操作失败，请刷新重试");
 <% else %>
-  <% case params[:style_type] %>
-  <% when "recruitment-list" %>
-    <% unless @is_like %>
-      $("#voteRecruitmentSpan<%= params[:voteable_id]%>").removeClass("glyphicon-star-empty").addClass("glyphicon-star");
-      alert("收藏成功");
-    <% else %>
-      $("#voteRecruitmentSpan<%= params[:voteable_id]%>").removeClass("glyphicon-star").addClass("glyphicon-star-empty");
-      alert("取消收藏成功");
-    <% end %>
-  <% when "recruitment-show" %>
-    <% unless @is_like %>
-      $("#collectRecruitment<%= params[:voteable_id]%>").text("取消收藏");
-      alert("收藏成功");
-    <% else %>
-      $("#collectRecruitment<%= params[:voteable_id]%>").text("我要收藏");
-      alert("取消收藏成功");
-    <% end %>
-  <% end %>
+	<% case params[:style_type] %>
+	<% when "recruitment-list" %>
+		<% unless @is_like %>
+			$("#voteRecruitmentSpan<%= params[:voteable_id]%>").removeClass("glyphicon-star-empty").addClass("glyphicon-star");
+			alert("收藏成功");
+		<% else %>
+			$("#voteRecruitmentSpan<%= params[:voteable_id]%>").removeClass("glyphicon-star").addClass("glyphicon-star-empty");
+			alert("取消收藏成功");
+		<% end %>
+	<% when "recruitment-show" %>
+		<% unless @is_like %>
+			$("#collectRecruitment<%= params[:voteable_id]%>").text("取消收藏");
+			alert("收藏成功");
+		<% else %>
+			$("#collectRecruitment<%= params[:voteable_id]%>").text("我要收藏");
+			alert("取消收藏成功");
+		<% end %>
+	<% when "comment_list" %>
+		$("#comment_praise_<%= params[:voteable_id]%>").replaceWith('<span class="pull-right"><span class="glyphicon glyphicon-thumbs-up text-danger"></span> '+
+			(parseInt($("#comment_praise_<%= params[:voteable_id]%>").text()) + 1)+'</span>');
+	<% end %>
 <% end %>
