modify evaluations.scss and show.html.erb

--- a/app/views/evaluations/show.html.erb
+++ b/app/views/evaluations/show.html.erb
@@ -1,8 +1,35 @@
 <div class="container evaluations__show">
 	<div class="row">
-		<p><span class="glyphicon glyphicon-home" aria-hidden="true"></span>职业测试/MBTI性格测试介绍</p>
-		<div class="col-xs-12 content">
-			
+		<strong><span class="glyphicon glyphicon-home" aria-hidden="true"></span>职业测试/MBTI性格测试介绍</strong>
+	</div>
+	<div class="row content">
+		<div class="col-xs-12 my-subhead">
+			<p>MBTI是一种迫选型、自我报告式的性格评估理论模型，用以衡量人们在获取信息、作出决策、对待生活等方面的心理活动规律和性格类型。</p>		
+		</div>
+		<div class="col-xs-12 main">
+			<div class="media">
+				<div class="media-left">
+					<a href="#">
+						<%=image_tag"evaluations-men.png"%>
+					</a>
+				</div>
+				<div class="media-body">
+					<h4 class="media-heading">MBTI职业性格测试（完整版）</h4>
+					<p>注：MBTI模型源自荣格(瑞士)与Myers-Briggs(美国)<br>
+						引导语：“我性格内向/外向，适合什么工作？”“哪些职业正好匹配我的性格？”“以我的个性从事什么行业好？”“我性格中的优势和劣势是什么？”“我是不是该继续现在从事的职业？” 不论是正待走进职场的毕业生，还是工作了一段时间的人，面对这类问题都会感到困惑——性格因素和职业选择之间到底存在什么样的关联呢？
+					</p>
+					<button class="btn btn-default">进入28题测试</button>
+					<button class="btn btn-default">进入93题测试</button>
+				</div>
+			</div>
+			<hr class="my-divider">
+			<p>要回答诸如此类的问题，我们就必须先了解到底性格差异是如何形成的。</p>
+			<p>瑞士心理学家荣格(Carl Jung)认为：感知和判断是大脑的两大基本功能。大脑做决定的瞬间可以慢动作分解为两个阶段：感知阶段（又分为触觉感知阶段和直觉感知阶段）和判断阶段（又分为感性判断和理性判断阶段）。为方便我们的理解，我们把大脑做出决定的瞬间直观想象为如下流程：（大脑获取信息后）触觉感知——直觉感知——感性判断——理性判断，最后做出决定。 不过请记住实际上这一过程是在瞬间交织（并非想象中简单的线性）完成的。</p>
+			<p>虽然每个人的大脑做出决定的瞬间都要走这四个流程，但是不同的人在其中某个环节中的倾向程度不同（也可以理解为滞留时间长短不同）：有些人更倾向停留在触觉感知环节多一些，而直觉感知一带而过；有些人在判断环节，更倾向停留在感性判断多一些，理性判断一带而过。 此外，大脑的这两大基本功能还受到每个人的精力来源不同与生活方式差异的影响（由美国心理学家Katherine Cook Briggs 提出），最终的决定就千差万别了。经过多年的实践和不断优化，荣格的人格分类理论已成为目前国际上有数据支撑的性格分类模型的理论基础。</p>
+			<p>性格会不会随着环境和时间的改变而发生改变呢？<br>
+				心理学认为，性格是心理活动的体现，而心理活动是大脑活动的产物。我们的意识、情绪都是由大脑中的神经元、灰质、树突、轴突、神经递质等共同作用的结果。在我们人生的最初几年(包括胚胎时期)，脑部的主要任务是确定所有脑细胞正确地连结起来。不只是建立细胞间的连结，还要把某些连结切断——3岁小孩脑细胞之间的连结是成年人的两倍——这些连结是乱七八糟的——为了妥善运作，脑部必须决定哪些连结要保留，哪些要断裂。在有限的大脑关键发育期间脑部必须检查成千上万兆的连结，因此不得不采取“残忍”而有效的原则：用不着的就自动断裂。</p>
+				<p>那么脑部如何判断哪些连结用得着，哪些用不着呢？通过观察，科学家总结出了大脑的判断规律：不断探测哪些区域经常受到刺激，而哪些区域极少受到刺激来决定是否断裂这些区域的连结。也就是说很少受到刺激的部分将自动断裂。通过发生在1970年洛杉矶郊区女孩吉妮身上的悲剧（被其精神情况极不稳定的父亲绑在一个小房间的椅子上长达12年半，因为父母几乎没有跟他说过话，她的脑部负责语言的部分几乎没有受到刺激，导致终身受损。吉妮被解救出来后通过多年语言训练，至今仍无法学会说话，只能“像动物一样呜咽”），这证实了大脑神经科学家对人类大脑初期发育的理解：过了脑部发育的关键时期，人的大脑结构基本定型，之后的环境变化以及训练很难改变大脑的构造，也很难改变基于大脑结构功能区特征。</p>
+				<p>同样，我们正常人在大脑发育关键时期接受到的刺激是有所不同的（当然刺激范围和种类是基本接近的），刺激的程度和强度也有一定差异。这些微小的差异对大脑发育的连结断裂以及结合时期的影响在于改变了功能神经元连结的强度。这些功能神经元连结强度对我们将来的获取信息、思维、决策方式都将产生一生的影响。因此，从心理学角度而言,性格一旦形成是不会发生改变的（荣格曾举过有极个别例子，比如在童年时期遭遇巨大情感挫折，可能会由外向转为内向）</p>
+			</div>
 		</div>
 	</div>
-</div>
