--- a/app/assets/stylesheets/application/evaluations.scss
+++ b/app/assets/stylesheets/application/evaluations.scss
@@ -1,8 +1,8 @@
 .evaluations__index{
 	hr{
-		border-width: 3px 0 0;
-		border-style: none;
-		padding-top: 10px;
+		border-color: #797979;
+		border-width: 3px 0 0; 
+		margin-top: 30px;
 	}
 	.caption{
 		h3{
@@ -12,9 +12,53 @@
 			text-indent: 2em;
 		}
 	}	
-	.evaluations__show{
-		.content{
+}
+
+.evaluations__show{
+	border:1px solid #ccc;
+	margin: 20px 0;
+	.row{
+		margin: 0 ;
+	}
+	.content{
+		margin-top: 10px;
+		border:1px solid #ccc;
+		.my-subhead{
 			border:1px solid #ccc;
+			background-color: #19B29F;
+			color: #fff;
+			height: 40px;
+			line-height: 40px;
+			text-indent: 2em;
+		}
+		.main{
+			padding: 20px 30px;
+			.media-body{
+				padding-left: 20px;
+				h4{
+					padding-bottom: 20px;
+				}
+				p{
+					margin-bottom: 30px;
+				}
+				.btn{
+					border:2px solid  darken(#19B29F, 6.5%);
+					padding: 6px 20px;
+					border-radius: 30px;
+					background-color: #19b29f;
+					color: #fff;
+					margin-right: 40px;
+				}
+			}
+			.my-divider{
+				border-style: dashed;
+				border-width: 1px;
+				border-color: #19B29F
+			}
+			p{
+				text-indent: 2em;
+				margin: 20px 0 40px;
+			}
 		}
 	}
 }
