--- a/app/views/evaluations/new.html.erb
+++ b/app/views/evaluations/new.html.erb
@@ -1,2 +1,14 @@
-<h1>Evaluations#new</h1>
-<p>Find me in app/views/evaluations/new.html.erb</p>
+<div class="container evaluations__new evaluations__show">
+	<div class="row">
+		<strong><span class="glyphicon glyphicon-home" aria-hidden="true"></span>职业测试/MBTI性格测试介绍/MBTI性格测试（28题）试题</strong>
+	</div>
+	<div class="row content">
+		<div class="col-xs-12 my-subhead">
+			<p>MBTI是一种迫选型、自我报告式的性格评估理论模型，用以衡量人们在获取信息、作出决策、对待生活等方面的心理活动规律和性格类型。</p>		
+		</div>
+		<div class="col-xs-12 text-center my-test">
+			<p>请靠第一感觉回答下面的问题</p>
+			<botton class="btn btn-defaut">开始答题</botton>
+		</div>
+	</div>
+</div>
