--- a/app/views/admin/common/_left.html.erb
+++ b/app/views/admin/common/_left.html.erb
@@ -5,11 +5,18 @@
 				<span class="glyphicon glyphicon-book"></span> 院校列表
 			<%end%>
 		</li>
-      <li>
-        <%= link_to admin_recruitments_path do %>
-          <span class="glyphicon glyphicon-tag"></span> 招聘列表
-        <%end%>
-      </li>
+
+                <li>
+                  <%= link_to admin_recruitments_path do %>
+                    <span class="glyphicon glyphicon-tag"></span> 招聘列表
+                  <%end%>
+                </li>
+                 <li>
+                  <%= link_to admin_companies_path do %>
+                    <span class="glyphicon glyphicon-briefcase"></span> 公司列表
+                  <%end%>
+                </li>
+
 		<li>
 			<%= link_to admin_categories_path do %>
 				<span class="glyphicon glyphicon-user"></span> 课程分类
