--- a/app/assets/stylesheets/admin/main.css.scss
+++ b/app/assets/stylesheets/admin/main.css.scss
@@ -115,3 +115,12 @@ footer{
   min-height: 90%;
   overflow: hidden;
 }
+table {
+  table-layout: fixed;
+  width: 100%;
+ #description  {
+  white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+  }
+}
