--- a/app/views/interviews/show.html.erb
+++ b/app/views/interviews/show.html.erb
@@ -1,1 +1,66 @@
-<%=link_to "back",interviews_path %>
+<div class="container">
+  <ol class="breadcrumb int_nav">
+    <li><span class="glyphicon glyphicon-home" aria-hidden="true"></span></li>
+    <li><a href="<%=interviews_path %>">面试经验</a></li>
+    <li class="active"><a href="#">正文</a></li>
+  </ol>
+  <div class="col-xs-12 text_title">
+    <span class="content_t" >
+      求职面试时常被问到的问题与技巧性回答
+    </span>
+    <div class="col-xs-2 pull-right collection_btn">
+      <span>
+        <div class="col-xs-3">
+          <%= link_to("javascript:void(0);" , title: "收藏", class: "btn btn_collection int-create-a", intable_id: @interview.id, intable_type: @interview.class, style_type: "interview-show", id: "collectInterview#{@interview.id}") do %>
+        </div>
+        <%= current_user.try(:inted_up_on?,@interview) ? "取消收藏" : "收藏" %>
+        <% end %><%=@interview.view_count %></span>
+
+      </div>
+    </div>
+    <div class="col-xs-12">
+      <div class="row content_t2">
+        <div class="col-xs-2"><span class="glyphicon glyphicon-book" aria-hidden="true"></span>所属分类：职业选择</div>
+        <div class="col-xs-3"><span class="glyphicon glyphicon-time" aria-hidden="true"></span>发布时间：2015-07-15</div>
+        <div class="col-xs-2 col-xs-offset-2"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>阅读人数：1000</div>
+        <div class="col-xs-3">
+          <div class="bdsharebuttonbox baidu-share">
+            <div class="row">
+              <span class="glyphicon glyphicon-share pull-left" aria-hidden="true">&nbsp<span>分享：</span></span>
+              <div class="share">
+                <a href="#" class="bds_more" data-cmd="more"></a>
+                <a title="分享到QQ空间" href="#" class="bds_qzone" data-cmd="qzone"></a>
+                <a title="分享到新浪微博" href="#" class="bds_tsina" data-cmd="tsina"></a>
+                <a title="分享到腾讯微博" href="#" class="bds_tqq" data-cmd="tqq"></a>
+                <a title="分享到人人网" href="#" class="bds_renren" data-cmd="renren"></a>
+                <a title="分享到微信" href="#" class="bds_weixin" data-cmd="weixin"></a>
+              </div>
+            </div>
+          </div>
+        </div> 
+      </div>
+      <hr class="devise1">  
+    </div>
+    <div class="col-xs-12">
+      <%=image_tag "interview1.png" %>
+    </div>
+    <% (1..5).each do |i| %>
+    <div class="text_content col-xs-12">
+      <h4>1、在线教育平台建设在线教育平台建设</h4>
+      <p>在线教育平台建设在线教育平台建设在线教育平台建设在线教育平台建设在线教育平台建设在线教育平台建设在线教育平台建设在线教育平台建设在线教育平台建设在线教育平台建设在线教育平台建设在线教育平台建设在线教育平台建设</p>
+    </div>
+    <% end %>
+    
+  </div>
+  <%=link_to "back",interviews_path %>
+  <script>
+    window._bd_share_config={"common":{"bdSnsKey":{},"bdText":"","bdMini":"2","bdMiniList":false,"bdPic":"","bdStyle":"0","bdSize":"16"},"share":{}};
+    with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];
+  </script>
+
+  <%= content_for :scripts do %>
+  <%= javascript_tag do %>
+  int_create_path = "<%= ints_path %>.js"
+  <% end %>
+  <%= javascript_include_tag "ints", 'data-turbolinks-track' => true  %>
+  <% end %>
