add comment collection

--- a/app/assets/stylesheets/application/interviews.scss
+++ b/app/assets/stylesheets/application/interviews.scss
@@ -88,3 +88,14 @@
 .devise1 {
 	border : 1px dashed #19b29f;
 }
+.inter_cmt_btn {
+	padding:0 15px;
+	margin-top:10px;
+	background-color:#19b29f;
+}
+.content3 {
+	background-color:#fcfcfc;
+}
+.text_content {
+	padding:10px;
+}
