--- a/app/views/votes/create.js.erb
+++ b/app/views/votes/create.js.erb
@@ -18,6 +18,16 @@
 			$("#collectRecruitment<%= params[:voteable_id]%>").text("我要收藏");
 			alert("取消收藏成功");
 		<% end %>
+	<% when "interview-show" %>
+		<% unless @is_like %>
+			$("#voteInterviewSpan<%= params[:voteable_id]%>").removeClass("glyphicon-star-empty").addClass("glyphicon-star");
+			$("#collectInterview<%= params[:voteable_id]%>").text("取消收藏");
+			alert("收藏成功");
+		<% else %>
+			$("#voteInterviewSpan<%= params[:voteable_id]%>").removeClass("glyphicon-star").addClass("glyphicon-star-empty");
+			$("#collectInterview<%= params[:voteable_id]%>").text("我要收藏");
+			alert("取消收藏成功");
+		<% end %>
 	<% when "comment_list" %>
 		$("#comment_praise_<%= params[:voteable_id]%>").replaceWith('<span class="pull-right"><span class="glyphicon glyphicon-thumbs-up text-danger"></span> '+
 			(parseInt($("#comment_praise_<%= params[:voteable_id]%>").text()) + 1)+'</span>');
