--- a/app/views/evaluations/show.html.erb
+++ b/app/views/evaluations/show.html.erb
@@ -18,8 +18,8 @@
 					<p>注：MBTI模型源自荣格(瑞士)与Myers-Briggs(美国)<br>
 						引导语：“我性格内向/外向，适合什么工作？”“哪些职业正好匹配我的性格？”“以我的个性从事什么行业好？”“我性格中的优势和劣势是什么？”“我是不是该继续现在从事的职业？” 不论是正待走进职场的毕业生，还是工作了一段时间的人，面对这类问题都会感到困惑——性格因素和职业选择之间到底存在什么样的关联呢？
 					</p>
-					<button class="btn btn-default">进入28题测试</button>
-					<button class="btn btn-default">进入93题测试</button>
+					<button class="btn btn-default my-btn">进入28题测试</button>
+					<button class="btn btn-default my-btn">进入93题测试</button>
 				</div>
 			</div>
 			<hr class="my-divider">
