--- a/app/assets/stylesheets/application/evaluations.scss
+++ b/app/assets/stylesheets/application/evaluations.scss
@@ -41,18 +41,18 @@
 					margin-bottom: 30px;
 				}
 			}
-			.my-divider{
-				border-style: dashed;
-				border-width: 1px;
-				border-color: #19B29F
-			}
 			p{
 				text-indent: 2em;
 				margin: 20px 0 40px;
 			}
 		}
 	}
-	.btn{
+	.my-divider{
+				border-style: dashed;
+				border-width: 1px;
+				border-color: #19B29F
+			}
+	.my-btn{
 		border:2px solid  darken(#19B29F, 6.5%);
 		padding: 6px 20px;
 		border-radius: 30px;
@@ -70,5 +70,34 @@
 	.btn{
 		padding: 6px 40px;
 		margin: 30px 40px 0;
+	}
+	.my-progress{
+		.progress-bar{
+			line-height: 15px;
+			background-color: #19B29F;
+		}
+		height: 15px;
+		border-radius: 15px;
+		margin-top: 20px;
+		padding: 0;
+	}
+	.new-btn{
+		padding-left: 10px;
+		border-radius: 8px;
+
+	}
+	.b-btn{
+		padding-right: 96px;
+	}
+	.focus-btn{
+		color: #fff;
+		background-color: #19B29F;
+	}
+	.up-btn{
+		color: #19B29F;
+		border:2px solid #19B29F;
+		border-radius: 20px;
+		padding: 2px 40px;
+		margin-bottom: 30px;
 	}
 }
