--- a/app/views/share/_header.html.erb
+++ b/app/views/share/_header.html.erb
@@ -22,8 +22,8 @@
 					   	<li><a href="<%= list_courses_path %>">大学课程</a></li>
 					  </ul>
 				</a></li>
-				<li class="<%= "active" if params[:controller] == '' && params[:action] == ''%>">
-					<a href="#">实训项目</a>
+				<li class="<%= "active" if params[:controller] == 'projects'%>">
+					<a href="<%= projects_path %>">实训项目</a>
 				</li>
 				<li  class="<%= "active" if (params[:controller] == 'recruitments' && 
 				(params[:action] == 'index' || params[:action] == 'show' || params[:action] == 'recommend')) || (params[:controller] == 'interviews' && params[:action] == 'index') || (params[:controller] == 'evaluations' && params[:action] == 'index')%>">
