--- a/app/views/interviews/show.html.erb
+++ b/app/views/interviews/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <ol class="breadcrumb int_nav">
+  <ol class="int_nav breadcrumb">
     <li><span class="glyphicon glyphicon-home" aria-hidden="true"></span></li>
     <li><a href="<%=interviews_path %>">面试经验</a></li>
     <li class="active"><a href="#">正文</a></li>
@@ -27,9 +27,9 @@
     <div class="content3">
     <div class="col-xs-12 content3">
       <div class="row content_t2">
-        <div class="col-xs-2"><span class="glyphicon glyphicon-book" aria-hidden="true"></span>所属分类：职业选择</div>
+        <div class="col-xs-2"><span class="glyphicon glyphicon-book" aria-hidden="true"></span>所属分类：<%=@interview.iv_category(:name) %></div>
         <div class="col-xs-3"><span class="glyphicon glyphicon-time" aria-hidden="true"></span>发布时间：2015-07-15</div>
-        <div class="col-xs-2 col-xs-offset-2"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>阅读人数：1000</div>
+        <div class="col-xs-2 col-xs-offset-2"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>阅读人数：<%=@interview.view_count %></div>
         <div class="col-xs-3">
           <div class="bdsharebuttonbox baidu-share">
             <div class="row">
@@ -48,7 +48,7 @@
       </div>
       <hr class="devise1">  
     </div>
-    <div class="col-xs-12 content3">
+    <div class="col-xs-12 content3 interview_img">
       <%=image_tag "interview1.png" %>
     </div>
     <% (1..5).each do |i| %>
