--- a/app/views/projects/project.html.erb
+++ b/app/views/projects/project.html.erb
@@ -43,7 +43,7 @@
             </div>
           </div><!-- #sidebar-shortcuts -->
 
-          <ul class="nav nav-list">
+          <ul class="nav nav-list ace-nav-left">
             <li class="active">
               <a href="index.html">
                 <i class="icon-dashboard"></i>
