--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
 	<%= csrf_meta_tags %>
 </head>
 
-<body class="<%= controller.controller_path.gsub('/','__') + '__' + controller.action_name %> " >
+<body class="<%= controller.controller_path.gsub('/','__') + '__' + controller.action_name %> skin-1" >
 	<%= render "share/flash_message" %>
 	
 	<%= render partial: 'share/header' %>
