--- a/app/views/training_platform/projects/project.html.erb
+++ b/app/views/training_platform/projects/project.html.erb
@@ -47,7 +47,7 @@
             <li class="active">
               <a href="index.html">
                 <i class="icon-dashboard"></i>
-                <span class="menu-text"> 控制台 </span>
+                <span class="menu-text"> 公告信息 </span>
               </a>
             </li>
 
@@ -61,7 +61,7 @@
             <li>
               <a href="#" class="dropdown-toggle">
                 <i class="icon-desktop"></i>
-                <span class="menu-text"> UI 组件 </span>
+                <span class="menu-text"> 我的任务 </span>
 
                 <b class="arrow icon-angle-down"></b>
               </a>
@@ -150,7 +150,7 @@
             <li>
               <a href="#" class="dropdown-toggle">
                 <i class="icon-list"></i>
-                <span class="menu-text"> 表格 </span>
+                <span class="menu-text"> 任务列表 </span>
 
                 <b class="arrow icon-angle-down"></b>
               </a>
@@ -175,7 +175,7 @@
             <li>
               <a href="#" class="dropdown-toggle">
                 <i class="icon-edit"></i>
-                <span class="menu-text"> 表单 </span>
+                <span class="menu-text"> 团队成员 </span>
 
                 <b class="arrow icon-angle-down"></b>
               </a>
@@ -212,13 +212,6 @@
             </li>
 
             <li>
-              <a href="widgets.html">
-                <i class="icon-list-alt"></i>
-                <span class="menu-text"> 插件 </span>
-              </a>
-            </li>
-
-            <li>
               <a href="calendar.html">
                 <i class="icon-calendar"></i>
 
@@ -229,116 +222,6 @@
                   </span>
                 </span>
               </a>
-            </li>
-
-            <li>
-              <a href="gallery.html">
-                <i class="icon-picture"></i>
-                <span class="menu-text"> 相册 </span>
-              </a>
-            </li>
-
-            <li>
-              <a href="#" class="dropdown-toggle">
-                <i class="icon-tag"></i>
-                <span class="menu-text"> 更多页面 </span>
-
-                <b class="arrow icon-angle-down"></b>
-              </a>
-
-              <ul class="submenu">
-                <li>
-                  <a href="profile.html">
-                    <i class="icon-double-angle-right"></i>
-                    用户信息
-                  </a>
-                </li>
-
-                <li>
-                  <a href="inbox.html">
-                    <i class="icon-double-angle-right"></i>
-                    收件箱
-                  </a>
-                </li>
-
-                <li>
-                  <a href="pricing.html">
-                    <i class="icon-double-angle-right"></i>
-                    售价单
-                  </a>
-                </li>
-
-                <li>
-                  <a href="invoice.html">
-                    <i class="icon-double-angle-right"></i>
-                    购物车
-                  </a>
-                </li>
-
-                <li>
-                  <a href="timeline.html">
-                    <i class="icon-double-angle-right"></i>
-                    时间轴
-                  </a>
-                </li>
-
-                <li>
-                  <a href="login.html">
-                    <i class="icon-double-angle-right"></i>
-                    登录 &amp; 注册
-                  </a>
-                </li>
-              </ul>
-            </li>
-
-            <li class="active open">
-              <a href="#" class="dropdown-toggle">
-                <i class="icon-file-alt"></i>
-
-                <span class="menu-text">
-                  其他页面
-                  <span class="badge badge-primary ">5</span>
-                </span>
-
-                <b class="arrow icon-angle-down"></b>
-              </a>
-
-              <ul class="submenu">
-                <li>
-                  <a href="faq.html">
-                    <i class="icon-double-angle-right"></i>
-                    帮助
-                  </a>
-                </li>
-
-                <li>
-                  <a href="error-404.html">
-                    <i class="icon-double-angle-right"></i>
-                    404错误页面
-                  </a>
-                </li>
-
-                <li>
-                  <a href="error-500.html">
-                    <i class="icon-double-angle-right"></i>
-                    500错误页面
-                  </a>
-                </li>
-
-                <li>
-                  <a href="grid.html">
-                    <i class="icon-double-angle-right"></i>
-                    网格
-                  </a>
-                </li>
-
-                <li class="active">
-                  <a href="blank.html">
-                    <i class="icon-double-angle-right"></i>
-                    空白页面
-                  </a>
-                </li>
-              </ul>
             </li>
           </ul><!-- /.nav-list -->
 
@@ -362,11 +245,7 @@
                 <i class="icon-home home-icon"></i>
                 <a href="#">Home</a>
               </li>
-
-              <li>
-                <a href="#">Other Pages</a>
-              </li>
-              <li class="active">Blank Page</li>
+              <li class="active">公告信息</li>
             </ul><!-- .breadcrumb -->
 
             <div class="nav-search" id="nav-search">
